--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,17 +8,77 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Frag Friedrich Barbarossa</title>
 <style>
-body { margin:0; overflow:hidden; background:black; display:flex; justify-content:center; align-items:center; height:100vh; flex-direction:column; font-family:"Georgia", serif; color:white; }
-h1 { position:absolute; top:20px; text-align:center; width:100%; font-size:2em; color:#e0b36b; text-shadow:0 0 10px #000; letter-spacing:2px; animation:pulse 3s ease-in-out infinite; }
-@keyframes pulse { 0%,100%{transform:scale(1);opacity:1;} 50%{transform:scale(1.05);opacity:0.9;} }
-#avatarCanvas { width:100%; height:100%; display:block; }
-#loading { position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); color:#ccc; font-size:1.2em; text-align:center; }
-#micBtn { position:absolute; bottom:60px; left:50%; transform:translateX(-50%); width:80px; height:80px; border-radius:50%; background:#222; color:white; border:none; font-size:32px; cursor:pointer; z-index:10; }
-#micBtn:hover{ background:#444; }
-#micNotice { position:absolute; bottom:140px; width:100%; text-align:center; color:#aaa; font-size:0.9em; }
-footer { position:absolute; bottom:15px; width:100%; text-align:center; font-size:0.8em; color:#aaa; }
-footer a{ color:#aaa; text-decoration:none; }
-footer a:hover{ text-decoration: underline; }
+body {
+  margin: 0;
+  overflow: hidden;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: column;
+  font-family: "Georgia", serif;
+  color: white;
+}
+h1 {
+  position: absolute;
+  top: 20px;
+  text-align: center;
+  width: 100%;
+  font-size: 2em;
+  color: #e0b36b;
+  text-shadow: 0 0 10px #000;
+  letter-spacing: 2px;
+  animation: pulse 3s ease-in-out infinite;
+}
+@keyframes pulse {
+  0%,100% { transform: scale(1); opacity:1; }
+  50% { transform: scale(1.05); opacity:0.9; }
+}
+#avatarCanvas { width: 100%; height: 100%; display: block; }
+#loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  color: #ccc;
+  font-size: 1.2em;
+  text-align: center;
+}
+#micBtn {
+  position: absolute;
+  bottom: 60px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background: #222;
+  color: white;
+  border: none;
+  font-size: 32px;
+  cursor: pointer;
+  z-index: 10;
+}
+#micBtn:hover { background:#444; }
+#micNotice {
+  position: absolute;
+  bottom: 140px;
+  width: 100%;
+  text-align: center;
+  color: #aaa;
+  font-size: 0.9em;
+}
+footer {
+  position: absolute;
+  bottom: 15px;
+  width: 100%;
+  text-align: center;
+  font-size: 0.8em;
+  color: #aaa;
+}
+footer a { color:#aaa; text-decoration:none; }
+footer a:hover { text-decoration: underline; }
 </style>
 </head>
 <body>
@@ -27,34 +87,44 @@ footer a:hover{ text-decoration: underline; }
 <canvas id="avatarCanvas"></canvas>
 <button id="micBtn">🎤</button>
 <div id="micNotice"></div>
-<footer>© 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a></footer>
+<footer>
+© 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
 
 <script>
 let model, talking=false, greeted=false;
-let lastTranscript="";
-let hmNeigen=false, hmStartTime=0, hmDuration=4000, hmStartRotX=0, hmStartRotY=0;
-let rising=false, riseStartTime=0, riseDuration=1200;
-let baseRotY=0.15; // Ausgangsposition leicht nach rechts
-let baseRotX=0.25;
-let targetRotY=baseRotY, targetRotX=baseRotX;
-let baseY=0;
-let phase="idle"; // "idle", "greeting", "listening", "hm", "answer", "return"
+let lastTranscript = "";
+let hmNeigen = false;
+let hmStartTime = 0;
+const hmDuration = 2000;
+let hmStartRotX = 0;
+let hmStartRotY = 0;
+
+let rising = false;
+let riseStartTime = 0;
+const riseDuration = 1200;
+let hmStarted = false;
+
+let baseRotY = -0.35;
+let baseRotX = 0.25;
+let targetRotY = baseRotY;
+let targetRotX = baseRotX;
+let baseY = 0;
 
 const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(30, window.innerWidth/window.innerHeight,0.1,1000);
+const camera = new THREE.PerspectiveCamera(30, window.innerWidth/window.innerHeight, 0.1, 1000);
 camera.position.set(0,0,2.8);
-const renderer = new THREE.WebGLRenderer({canvas:document.getElementById("avatarCanvas"),antialias:true});
+const renderer = new THREE.WebGLRenderer({canvas: document.getElementById("avatarCanvas"), antialias:true});
 renderer.setSize(window.innerWidth, window.innerHeight);
 renderer.setPixelRatio(window.devicePixelRatio);
 renderer.setClearColor(0x000000);
 
-// Lichtblock korrigiert für Goldmaterial
-const dirLight = new THREE.DirectionalLight(0xffffff,2);
-dirLight.position.set(1,1,2);
-scene.add(dirLight);
+const light = new THREE.DirectionalLight(0xffffff,2);
+light.position.set(1,1,2);
+scene.add(light);
 scene.add(new THREE.AmbientLight(0xffffff,0.8));
 const frontLight = new THREE.PointLight(0xffffff,0.8);
 frontLight.position.set(0,0.5,2);
@@ -68,164 +138,163 @@ loader.load("./avatar.glb", gltf=>{
   const box = new THREE.Box3().setFromObject(model);
   const size = box.getSize(new THREE.Vector3());
   const maxDim = Math.max(size.x,size.y,size.z);
-  let scaleFactor = (1.5/maxDim)*0.8;
-  model.scale.set(scaleFactor,scaleFactor,scaleFactor);
+  let scaleFactor = (1.5 / maxDim) * 0.8; 
+  model.scale.set(scaleFactor, scaleFactor, scaleFactor);
   const center = box.getCenter(new THREE.Vector3());
   model.position.sub(center);
-  model.rotation.y=baseRotY; // Ausgangsposition frontal leicht rechts
-  model.rotation.x=baseRotX;
+  model.rotation.y = baseRotY - Math.PI/2;
+  model.rotation.x = baseRotX;
   scene.add(model);
   loadingText.style.display="none";
   animate();
-},undefined,err=>{
-  console.error("Fehler beim Laden:",err);
+}, undefined, err=>{
+  console.error("Fehler beim Laden des Modells:",err);
   loadingText.textContent="Fehler beim Laden des Avatars.";
 });
 
 function animate(){
   requestAnimationFrame(animate);
-  if(!model) return;
-  const t=Date.now();
+  if(model){
+    // Aufrichten nach Begrüßung
+    if(rising){
+      const t = (performance.now() - riseStartTime) / riseDuration;
+      const easeT = t < 0 ? 0 : (t > 1 ? 1 : (-Math.cos(Math.PI * t)/2 + 0.5));
+      targetRotY = baseRotY * (1 - easeT);
+      targetRotX = baseRotX * (1 - easeT);
+      if(t >= 1) rising = false;
+    }
 
-  // Hm-Phase: langsam nach links neigen
-  if(hmNeigen){
-    let progress = (performance.now()-hmStartTime)/hmDuration;
-    if(progress>=1){
-      hmNeigen=false;
-      targetRotX=baseRotX; // Basis
-      targetRotY=0; // frontal
-    }else{
-      model.rotation.x=hmStartRotX+0.05*progress;
-      model.rotation.y=hmStartRotY-0.1*progress; // leicht links
+    // Hm-Phase: langsam nach vorne-links neigen
+    if(hmNeigen){
+      const t = (performance.now() - hmStartTime) / hmDuration;
+      if(t >= 1){
+        hmNeigen = false;
+        model.rotation.x = hmStartRotX + 0.3;
+        model.rotation.y = hmStartRotY + 0.3; 
+      } else {
+        model.rotation.x = hmStartRotX + 0.3 * t;
+        model.rotation.y = hmStartRotY + 0.3 * t;
+      }
+    }
+
+    // Normal Talking Animation
+    if(talking && !hmNeigen){
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY + Math.sin(Date.now()*0.0015)*0.03 - Math.PI/2, 0.08);
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX + Math.sin(Date.now()*0.0019)*0.015, 0.08);
+      model.rotation.z = Math.sin(Date.now()*0.0012)*0.015;
+      model.position.y = baseY + Math.sin(Date.now()*0.01)*0.002;
+    } else if(!hmNeigen){
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2, 0.02);
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX, 0.02);
+      model.rotation.z = THREE.MathUtils.lerp(model.rotation.z || 0, 0, 0.02);
+      model.position.y = THREE.MathUtils.lerp(model.position.y, baseY, 0.02);
     }
   }
-
-  // Aufrichten während Antwort
-  if(rising){
-    const tRise = (performance.now()-riseStartTime)/riseDuration;
-    const easeT = tRise<0?0:(tRise>1?1:(-Math.cos(Math.PI*tRise)/2+0.5));
-    targetRotX = baseRotX*(1-easeT);
-    targetRotY = 0*(1-easeT); // frontal
-    if(tRise>=1) rising=false;
-  }
-
-  // Talking Animation mit Atmung und minimaler Kopfbewegung
-  if(talking){
-    const breathe = Math.sin(t*0.0015)*0.008+Math.sin(t*0.0007)*0.004;
-    model.position.y=baseY+breathe;
-    const swayY=Math.sin(t*0.0012)*0.02+Math.sin(t*0.0023)*0.01;
-    const swayX=Math.sin(t*0.0017)*0.015+Math.sin(t*0.0021)*0.008;
-    const swayZ=Math.sin(t*0.0015)*0.004;
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY+swayY, 0.08);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX+swayX, 0.08);
-    model.rotation.z = swayZ;
-  }else{
-    model.rotation.y = THREE.MathUtils.lerp(model.rotation.y,targetRotY,0.02);
-    model.rotation.x = THREE.MathUtils.lerp(model.rotation.x,targetRotX,0.02);
-    model.rotation.z = THREE.MathUtils.lerp(model.rotation.z||0,0,0.02);
-    model.position.y = THREE.MathUtils.lerp(model.position.y,baseY,0.02);
-  }
-
   renderer.render(scene,camera);
 }
 
-window.addEventListener("resize",()=>{
+window.addEventListener("resize", ()=>{
   camera.aspect=window.innerWidth/window.innerHeight;
   camera.updateProjectionMatrix();
   renderer.setSize(window.innerWidth,window.innerHeight);
 });
 
-// Sprachsteuerung
-const micBtn=document.getElementById("micBtn");
-const micNotice=document.getElementById("micNotice");
-let recognizing=false,recognition;
+const micBtn = document.getElementById("micBtn");
+const micNotice = document.getElementById("micNotice");
+let recognizing=false, recognition;
 
 if("webkitSpeechRecognition" in window){
-  recognition=new webkitSpeechRecognition();
+  recognition = new webkitSpeechRecognition();
   recognition.lang="de-DE";
   recognition.continuous=false;
   recognition.interimResults=false;
 
-  recognition.onresult=(event)=>{
-    lastTranscript=event.results[0][0].transcript;
-    console.log("🎙️ Gesprochen:",lastTranscript);
+  recognition.onresult = (event) => {
+    lastTranscript = event.results[0][0].transcript;
+    console.log("🎙️ Gesprochen:", lastTranscript);
   };
 
-  recognition.onend=()=>{
-    micBtn.style.background="#222";
-    recognizing=false;
+  recognition.onend = () => {
+    micBtn.style.background = "#222";
+    recognizing = false;
 
-    if(lastTranscript){
-      if(phase==="idle"){
-        phase="greeting";
-        greeted=true;
-        rising=true;
-        riseStartTime=performance.now();
-        targetRotY=0; // frontal
-        speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa. Sprecht, was begehrt Ihr?",false);
-      } else if(phase==="greeting"){
-        phase="listening";
-        hmNeigen=true;
-        hmStartTime=performance.now();
-        hmStartRotX=model.rotation.x;
-        hmStartRotY=model.rotation.y;
-        speak("Hmmmm… einen Moment",true);
+    if(lastTranscript && !hmStarted){
+      hmStarted = true;
+      hmNeigen = true;
+      hmStartTime = performance.now();
+      hmStartRotX = model.rotation.x;
+      hmStartRotY = model.rotation.y;
+      speak("Hmmmmmm… einen Moment", true); 
 
-        fetch("/ask",{
-          method:"POST",
-          headers:{"Content-Type":"application/json"},
-          body:JSON.stringify({text:lastTranscript})
-        }).then(resp=>resp.json()).then(data=>{
-          phase="answer";
-          rising=true;
-          riseStartTime=performance.now();
-          targetRotX=baseRotX;
-          targetRotY=0; // frontal
-          speak(data.answer,false);
+      fetch("/ask", {
+        method:"POST",
+        headers:{"Content-Type":"application/json"},
+        body: JSON.stringify({text:lastTranscript})
+      })
+      .then(resp => resp.json())
+      .then(data => {
+        rising = true;
+        riseStartTime = performance.now();
+        speak(data.answer);
 
-          // Rückkehr zur Ausgangsposition nach Antwort
-          setTimeout(()=>{
-            phase="idle";
-            targetRotX=baseRotX;
-            targetRotY=baseRotY; // leicht nach rechts
-            lastTranscript="";
-            greeted=false;
-          },1000);
-        }).catch(e=>console.error("Fehler bei /ask:",e));
-      }
+        setTimeout(()=>{
+          rising = true;
+          riseStartTime = performance.now();
+          hmStarted = false;
+          lastTranscript = "";
+        }, 500); 
+      })
+      .catch(e => console.error("Fehler bei /ask:", e));
     }
   };
 }else{
   micNotice.textContent="🎤 Sprachsteuerung wird im Browser nicht unterstützt. Bitte Chrome/Edge nutzen.";
 }
 
-let maleVoice=null;
+let maleVoice = null;
 function loadVoices(){
-  const voices=speechSynthesis.getVoices();
-  maleVoice=voices.find(v=>/male|mann|stefan|markus/i.test(v.name))||
-            voices.find(v=>v.lang.startsWith("de"))||
-            voices[0]||null;
+  const voices = speechSynthesis.getVoices();
+  maleVoice = voices.find(v=>/male|mann|stefan|markus/i.test(v.name)) ||
+              voices.find(v=>v.lang.startsWith("de")) ||
+              voices[0]||null;
 }
-speechSynthesis.onvoiceschanged=loadVoices;
+speechSynthesis.onvoiceschanged = loadVoices;
 loadVoices();
 
-function speak(text,slow=false){
-  if(!text||!maleVoice) return;
-  const utter=new SpeechSynthesisUtterance(text);
+function speak(text, slow=false){
+  if(!text || !maleVoice) return;
+  const utter = new SpeechSynthesisUtterance(text);
   utter.lang="de-DE";
-  utter.rate=slow?0.4:0.95;
-  utter.pitch=0.6;
-  utter.voice=maleVoice;
-  utter.volume=0.6;
+  utter.rate = slow ? 0.4 : 0.95;
+  utter.pitch = 0.6;
+  utter.voice = maleVoice;
+  utter.volume = 0.6;
   utter.onstart=()=>{ talking=true; };
   utter.onend=()=>{ talking=false; };
   speechSynthesis.speak(utter);
 }
 
-micBtn.onclick=()=>{
+micBtn.onclick = () => {
   if(!recognition) return;
-  recognition.start();
-  micBtn.style.background="#555";
+
+  if(!greeted){
+    greeted = true;
+    rising = true;
+    riseStartTime = performance.now();
+    speak("Seid gegrüßt, mein Freund. Ich bin Friedrich Barbarossa, nach tausend Jahren im Kaiserberg zu Lautern erwacht aus tiefem Schlummer. Sprecht, was begehrt Ihr?");
+    return;
+  }
+
+  if(!recognizing){
+    recognition.start();
+    micBtn.style.background = "#555";
+    recognizing = true;
+    hmStarted = false;
+  } else {
+    recognition.stop();
+    micBtn.style.background = "#222";
+    recognizing = false;
+  }
 };
 </script>
 </body>
